--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: "mulu.eu"
 github_username:  dashingcode
 codepen_username: your_codepen_username_goes_here
 facebook_username: your_facebook_username_goes_here
-vk_username: your_vk_username_goes_here
+#vk_username: your_vk_username_goes_here
 twitter_username: your_twitter_username_goes_here
 google_plus_username: your_google_plus_username_goes_here
 linkedin_username: your_linked_in_username_goes_here
